Add Zapier chatbot integration to enhance user support

--- a/client/public/404.html
+++ b/client/public/404.html
@@ -17,9 +17,13 @@
         l.hash
       );
     </script>
+    <!-- Zapier Chatbot Script -->
+    <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
   </head>
   <body>
     <h1>Redirecting...</h1>
     <p>If you are not redirected automatically, please <a href="https://mrtahadev.github.io/wiki-esi-2027-deploy">click here</a>.</p>
+    <!-- Zapier Chatbot Component -->
+    <zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cm8tkjnhd002uzpks79g30n3b'></zapier-interfaces-chatbot-embed>
   </body>
 </html> 
