--- a/client/public/index.html
+++ b/client/public/index.html
@@ -44,6 +44,8 @@
         }
       })();
     </script>
+    <!-- Zapier Chatbot Script -->
+    <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
     <title>Wiki ESI 2027</title>
   </head>
   <body>
@@ -59,5 +61,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Zapier Chatbot Component -->
+    <zapier-interfaces-chatbot-embed is-popup='true' chatbot-id='cm8tkjnhd002uzpks79g30n3b'></zapier-interfaces-chatbot-embed>
   </body>
 </html>
